// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoCompletePicker Closed smoke-test 1`] = `
<div>
  <div class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root">
    <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-standard MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-standard css-dyxksa-MuiFormLabel-root-MuiInputLabel-root"
           data-shrink="true"
    >
      Package
    </label>
    <div class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl Mui-readOnly MuiInputBase-readOnly css-t6baui-MuiInputBase-root-MuiInput-root">
      <input aria-invalid="false"
             placeholder="Pick a package"
             readonly
             type="text"
             class="MuiInputBase-input MuiInput-input Mui-readOnly stable-makeStyles-pickerButtonInput-5 MuiInputBase-readOnly css-1x51dt5-MuiInputBase-input-MuiInput-input"
             value="2261.0.0"
      >
    </div>
  </div>
</div>
`;

exports[`AutoCompletePicker Open smoke-test 1`] = `
<div>
  <div class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root">
    <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-standard MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-standard css-dyxksa-MuiFormLabel-root-MuiInputLabel-root"
           data-shrink="true"
    >
      Package
    </label>
    <div class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl Mui-readOnly MuiInputBase-readOnly css-t6baui-MuiInputBase-root-MuiInput-root">
      <input aria-invalid="false"
             placeholder="Pick a package"
             readonly
             type="text"
             class="MuiInputBase-input MuiInput-input Mui-readOnly stable-makeStyles-pickerButtonInput-10 MuiInputBase-readOnly css-1x51dt5-MuiInputBase-input-MuiInput-input"
             value="2261.0.0"
      >
    </div>
  </div>
</div>
`;
